--- a/venuesWebsite/home/templates/home/home.html
+++ b/venuesWebsite/home/templates/home/home.html
@@ -2,5 +2,15 @@
 
 
 {% block content %}
-<p>Welcome to Venue Booker!</p>
+<p>Welcome to Venue Booker! We are a small company looking to promote small musicians and concert democracy.</p>
+<p>Welcome to Venue Booker! We are a small company looking to promote small musicians and concert democracy.</p>
+<p>Welcome to Venue Booker! We are a small company looking to promote small musicians and concert democracy.</p>
+<p>Welcome to Venue Booker! We are a small company looking to promote small musicians and concert democracy.</p>
+<p>Welcome to Venue Booker! We are a small company looking to promote small musicians and concert democracy.</p>
+<p>Welcome to Venue Booker! We are a small company looking to promote small musicians and concert democracy.</p>
+<p>Welcome to Venue Booker! We are a small company looking to promote small musicians and concert democracy.</p>
+<p>Welcome to Venue Booker! We are a small company looking to promote small musicians and concert democracy.</p>
+<p>Welcome to Venue Booker! We are a small company looking to promote small musicians and concert democracy.</p>
+
+{% include "home/includes/htmlsnippet.html" %}
 {% endblock %}	
