--- a/venuebooker/land/static/land/main.css
+++ b/venuebooker/land/static/land/main.css
@@ -17,11 +17,11 @@ body {
   }
   
   .site-header .navbar-nav .nav-link {
-    color: #cbd5db;
+    color: #f9f50e;
   }
   
   .site-header .navbar-nav .nav-link:hover {
-    color: #ffffff;
+    color: #ffa500;
   }
   
   .site-header .navbar-nav .nav-link.active {
