--- a/venuebooker/land/templates/land/base.html
+++ b/venuebooker/land/templates/land/base.html
@@ -36,19 +36,17 @@
 
         <main role="main" class="container">
             <div class="row">
-                <h2>Cal Hacks 5.0! Let's get it!</h2>
                 <div class="col-md-8">
                 {% block content %}{% endblock %}
                 </div>
                 <div class="col-md-4">
                 <div class="content-section">
-                    <h3>Our Sidebar</h3>
-                    <p class='text-muted'>You can put any information here you'd like.
+                    <h3>Information</h3>
+                    <p class='text-muted'>Check out what's hot in Berkeley!
                     <ul class="list-group">
-                        <li class="list-group-item list-group-item-light">Latest Posts</li>
-                        <li class="list-group-item list-group-item-light">Announcements</li>
-                        <li class="list-group-item list-group-item-light">Calendars</li>
-                        <li class="list-group-item list-group-item-light">etc</li>
+                        <li class="list-group-item list-group-item-light">Listings</li>
+                        <li class="list-group-item list-group-item-light">Your Events</li>
+                        <li class="list-group-item list-group-item-light">Your History</li>
                     </ul>
                     </p>
                 </div>
