--- a/venuebooker/land/templates/land/base.html
+++ b/venuebooker/land/templates/land/base.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <!-- Required meta tags -->
+    {% load staticfiles %}
+    <link rel='stylesheet' href="{% static 'land/css/materialize.min.css' %}" type='text/css'/>
+<meta name="viewport" content = "width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -52,6 +55,13 @@
                 </div>
                 </div>
             </div>
+
+
+
+
+
+
+
         </main>
 
         <!-- Optional JavaScript -->
@@ -59,5 +69,30 @@
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <footer>
+        <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-bottom">
+                <div class="container">
+
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarToggle">
+                    <div class="navbar-nav mr-auto">
+                    <a class="nav-item nav-link" href="{% url 'booker-home' %}">Facebook</a>
+                    <a class="nav-item nav-link" href="{% url 'booker-about' %}">Twitter</a>
+                    </div>
+                    <!-- Navbar Right Side -->
+                    <div class="navbar-nav">
+                    <a class="nav-item nav-link" href="#">Report Bug</a>
+                    </div>
+                </div>
+                </div>
+            </nav>
+    </footer>
+
     </body>
+
+
+
 </html>
