--- a/venuebooker/land/templates/land/base.html
+++ b/venuebooker/land/templates/land/base.html
@@ -37,16 +37,23 @@
         </header>
 
 
+
+
+
         <main role="main" class="container">
+
+
             <div class="row">
                 <div class="col-md-8">
                 {% block content %}{% endblock %}
                 </div>
                 <div class="col-md-4">
-                <div class="content-section">
+                <div class="content-section" align="right">
                     <h3>Information</h3>
                     <p class='text-muted'>Check out what's hot in Berkeley!
                     <ul class="list-group">
+
+
                         <li class="list-group-item list-group-item-light">Listings</li>
                         <li class="list-group-item list-group-item-light">Your Events</li>
                         <li class="list-group-item list-group-item-light">Your History</li>
@@ -71,6 +78,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <footer>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-bottom">
                 <div class="container">
 
