--- a/venuebooker/land/templates/land/base.html
+++ b/venuebooker/land/templates/land/base.html
@@ -15,23 +15,16 @@
     </head>
     <body>
         <header class="site-header">
-            <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+            <nav class="navbar navbar-expand-md white fixed-top">
                 <div class="container">
-                <a class="navbar-brand mr-4" href="{% url 'booker-home' %}">Venue Booker</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarToggle">
                     <div class="navbar-nav mr-auto">
-                    <a class="nav-item nav-link" href="{% url 'booker-home' %}">Home</a>
-                    <a class="nav-item nav-link" href="{% url 'booker-about' %}">About</a>
+                        <a class="nav-item nav-link" href="{% url 'booker-home' %}">HOME</a>
+                        <a class="nav-item nav-link" href="{% url 'booker-about' %}">ABOUT</a>
                     </div>
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="#">Login</a>
-                    <a class="nav-item nav-link" href="#">Register</a>
+                        <a class="waves-effect waves-light btn">Sign In</a>
                     </div>
-                </div>
                 </div>
             </nav>
         </header>
