--- a/venuebooker/land/templates/land/home.html
+++ b/venuebooker/land/templates/land/home.html
@@ -5,10 +5,10 @@
     <article class="media content-section">
         <div class="media-body">
             <div class="article-metadata">
-            <a class="mr-2" href="#">{{ event.name }}</a>
+            <a class="mr-2" href="#"> Performing on {{event.performance_date|date:"F d, Y"}}</a>
             <!--<small class="text-muted">{{ post.date_posted }}</small>--> 
             </div>
-            <h2><a class="article-title" href="#"> Performing on {{event.performance_date}}</a></h2>
+            <h2><a class="article-title" href="#"> {{event.concert}} by {{ event.name }} </a></h2>
             <!--<p class="article-content">{{ post.content }}</p>-->
         </div>
     </article>
