--- a/venuebooker/land/templates/land/base.html
+++ b/venuebooker/land/templates/land/base.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <!-- Required meta tags -->
-    {% load staticfiles %}
-    <link rel='stylesheet' href="{% static 'land/css/materialize.min.css' %}" type='text/css'/>
-<meta name="viewport" content = "width=device-width, initial-scale=1.0">
+        {% load staticfiles %}
+        <link rel='stylesheet' href="{% static 'land/css/materialize.min.css' %}" type='text/css'/>
+        <meta name="viewport" content = "width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -23,7 +23,12 @@
                     </div>
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
-                        <a class="waves-effect waves-light btn">Sign In</a>
+                        {% if user.is_authenticated %}
+                            <a class="waves-effect waves-light btn" href="{% url 'profile' %}">Profile</a>
+                            <a class="waves-effect waves-light btn" href="{% url 'logout' %}">Logout</a>
+                        {% else %}
+                            <a class="waves-effect waves-light btn" href="{% url 'login' %}">Sign In</a>
+                        {% endif %}
                     </div>
                 </div>
             </nav>
@@ -38,6 +43,13 @@
 
             <div class="row">
                 <div class="col-md-8">
+                {% if messages %}
+                    {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }}">
+                        {{message}}
+                    </div>
+                    {% endfor %}
+                {% endif %}
                 {% block content %}{% endblock %}
                 </div>
                 <div class="col-md-4">
