--- a/venuebooker/land/templates/land/home.html
+++ b/venuebooker/land/templates/land/home.html
@@ -3,17 +3,14 @@
 {%block content%}
     {% for event in events %}
     <article class="media content-section">
-        <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
+        <img class="rounded-circle article-img" src="{{ event.name.profile.image.url }}>
         <div class="media-body">
             <div class="article-metadata">
             <a class="mr-2" href="#"> Performing on {{event.performance_date|date:"F d, Y"}}</a>
             <h2><a class="article-title" href="#"> <a class="mt-0" href="#">{{ event.name }}</a></a></h2>
-            
             <img src="https://nyppagesix.files.wordpress.com/2018/10/181027-west-shirts.jpg" alt="W3Schools.com" style="width:200px;height:142px;">
-            <!--<small class="text-muted">{{ post.date_posted }}</small>--> 
             </div>
             <h2><a class="article-title" href="#"> {{event.concert}} by {{ event.name }} </a></h2>
-            <!--<p class="article-content">{{ post.content }}</p>-->
         </div>
     </article>
 
