--- a/venuebooker/land/static/land/css/materialize.css
+++ b/venuebooker/land/static/land/css/materialize.css
@@ -4767,12 +4767,12 @@ small {
 }
 
 .card.small .card-image, .card.medium .card-image, .card.large .card-image {
-  max-height: 60%;
+  max-height: 20%;
   overflow: hidden;
 }
 
 .card.small .card-image + .card-content, .card.medium .card-image + .card-content, .card.large .card-image + .card-content {
-  max-height: 40%;
+  max-height: 20%;
 }
 
 .card.small .card-content, .card.medium .card-content, .card.large .card-content {
@@ -4813,11 +4813,11 @@ small {
 }
 
 .card.horizontal.small .card-image img, .card.horizontal.medium .card-image img, .card.horizontal.large .card-image img {
-  height: 100%;
+  height: 20%;
 }
 
 .card.horizontal .card-image {
-  max-width: 50%;
+  max-width: 20%;
 }
 
 .card.horizontal .card-image img {
@@ -4864,14 +4864,12 @@ small {
 }
 
 .card .card-image img {
-  display: block;
-  border-radius: 2px 2px 0 0;
-  position: relative;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
   width: 100%;
+  display: block;
+  background-position: center;
+  position: relative;
+  /* Make the background image cover the area of the <div>, and clip the excess */
+  background-size: cover;
 }
 
 .card .card-image .card-title {
@@ -4879,6 +4877,7 @@ small {
   position: absolute;
   bottom: 0;
   left: 0;
+  background-size: cover;
   max-width: 100%;
   padding: 24px;
 }
@@ -9064,4 +9063,9 @@ input[type=range]::-ms-thumb {
     text-align: center;
     margin-top: 1.2rem;
   }
+}
+
+.card.custom {
+  max-height: 20%;
+  height: 100px;
 }
