--- a/venuebooker/land/static/land/main.css
+++ b/venuebooker/land/static/land/main.css
@@ -1,100 +1,32 @@
-body {
-<<<<<<< HEAD
-    background: #e00404;
-    color: #333333;
-=======
-    background: #ffffff;
-    color: #ffffff;
->>>>>>> 194e6aa5c452a8a87d6cab6150300072ff76af61
-    margin-top: 5rem;
-  }
+.logo {
+    margin-top: 7.5px;
+    margin-left: 15px;
+    margin-right: 15px;
+    display: inline-block;
+    height: 82%;
+    width: height;
+}
 
-  h1, h2, h3, h4, h5, h6 {
-    color: #444444;
-  }
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
-  ul {
-    margin: 0;
-  }
+.navigation-button {
+    font-family: 'Roboto', serif;
+    color: #bbbfc2;
+    background-color: white;
+    margin-left: 15px;
+    margin-right: 15px;
+}
 
-  .bg-steel {
-    background-color: #5f788a;
-  }
+.overlay {
+  opacity: 1;
+  transition: .5s ease;
+  background-color: red;
+}
 
-  @import url(//fonts.googleapis.com/css?family=Roboto);
+.overlay:hover {
+  opacity: 0.6;
+}
 
-  .site-header .navbar-nav .nav-link {
-    color: #a7aaae;
-    font-style: Bold;
-    font-weight: 700;
-    font-family: 'Roboto', sans-serif;
-  }
-
-  .site-header .navbar-nav .nav-link:hover {
-      -o-transition:color .2s ease-out, background 1s ease-in;
-      -ms-transition:color .2s ease-out, background 1s ease-in;
-      -moz-transition:color .2s ease-out, background 1s ease-in;
-      -webkit-transition:color .2s ease-out, background 1s ease-in;
-      /* ...and now override with proper CSS property */
-      transition:color .2s ease-out, background 1s ease-in;
-      color: #bcbfc2;
-  }
-
-  .site-header .navbar-nav .nav-link.active {
-    font-weight: 500;
-  }
-
-  .content-section {
-    background: #ffffff;
-    padding: 10px 20px;
-    border: 1px solid #dddddd;
-    border-radius: 3px;
-    margin-bottom: 20px;
-  }
-
-  .article-title {
-    color: #444444;
-  }
-
-  a.article-title:hover {
-    color: #428bca;
-    text-decoration: none;
-  }
-
-  .article-content {
-    white-space: pre-line;
-  }
-
-  .article-img {
-    height: 65px;
-    width: 65px;
-    margin-right: 16px;
-  }
-
-  .article-metadata {
-    padding-bottom: 1px;
-    margin-bottom: 4px;
-    border-bottom: 1px solid #e3e3e3
-  }
-
-  .article-metadata a:hover {
-    color: #333;
-    text-decoration: none;
-  }
-
-  .article-svg {
-    width: 25px;
-    height: 25px;
-    vertical-align: middle;
-  }
-
-  .account-img {
-    height: 125px;
-    width: 125px;
-    margin-right: 20px;
-    margin-bottom: 16px;
-  }
-
-  .account-heading {
-    font-size: 2.5rem;
-  }
+.oof {
+    font-family: 'Roboto', serif;
+}
