--- a/venuebooker/land/static/land/main.css
+++ b/venuebooker/land/static/land/main.css
@@ -7,6 +7,11 @@
     width: height;
 }
 
+.overflows {
+    overflow: -moz-scrollbars-vertical;
+    overflow-y: scroll;
+}
+
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 .navigation-button {
