--- a/venuebooker/land/static/land/main.css
+++ b/venuebooker/land/static/land/main.css
@@ -22,6 +22,77 @@
     overflow-y: scroll;
 }
 
+.overlay2 {
+  opacity: 0;
+  transition: .5s ease;
+  background-color: black;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    height: 300px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.centered {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.div1 {
+    position: relative;
+    color: white;
+    font-size: 20px;
+    width: 100%;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.div2 {
+    position: relative;
+}
+.middle:hover: {
+    opacity: 1;
+}
+
+.card-image:hover .overlay2 {
+    opacity: 1;
+}
+
+.image:hover > .overlay {
+    width:100%;
+    height:100%;
+    position:absolute;
+    background-color:#000;
+    opacity:0.5;
+    border-radius:30px;
+}
+
+.fwomp {
+    transition: .5s ease;
+}
+
+.fwomp:hover {
+  filter: brightness(50%);
+}
+
 .overlay {
   opacity: 1;
   transition: .5s ease;
