--- a/venuebooker/users/templates/users/login.html
+++ b/venuebooker/users/templates/users/login.html
@@ -1,21 +1,22 @@
 {%extends "land/base.html"%}
 {% load crispy_forms_tags %}
 {%block content%}
-    <div class="content-section">
+    <div class="content-section" style="margin-left: 300px; margin-top: 100px">
         <form method="POST">
             {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Log In</legend>
+            <fieldset class="form-group" style="margin-top: 20px; width: 500px">
+                <legend class="border-bottom mb-4" style="margin-top: 100px">Log In</legend>
                 {{ form|crispy }}
             </fieldset>
+            <div class="border-top pt-3">
+                <small class="text-muted" style="margin-left=10px">
+                    Need an Account? <a class="ml-2" href="{% url 'login' %}">Sign Up Now</a>
+                </small>
+            </div>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Login</button>
+                <button class="btn btn-outline-info" type="submit" style="margin-top: 20px">Login</button>
             </div>
         </form>
-        <div class="border-top pt-3">
-            <small class="text-muted">
-                Need an Account? <a class="ml-2" href="{% url 'register' %}">Sign Up Now</a>
-            </small>
-        </div>
+
     </div>
 {%endblock content%}
