--- a/venuebooker/users/templates/users/register.html
+++ b/venuebooker/users/templates/users/register.html
@@ -1,21 +1,22 @@
 {%extends "land/base.html"%}
 {% load crispy_forms_tags %}
 {%block content%}
-    <div class="content-section">
+    <div class="content-section" style="margin-left: 300px; margin-top: 100px">
         <form method="POST">
             {% csrf_token %}
-            <fieldset class="form-group">
+            <fieldset class="form-group" style="margin-top: 20px; width: 500px">
                 <legend class="border-bottom mb-4">Join Today!</legend>
                 {{ form|crispy }}
             </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Sign Up</button>
+            <div class="border-top pt-3">
+                <small class="text-muted">
+                    Already Have an Account? <a class="ml-2" href="{% url 'register' %}">Sign In</a>
+                </small>
+            </div>
+            <div class="form-group" style="margin-top: 20px">
+                <button class="btn btn-outline-info" type="submit">Register</button>
             </div>
         </form>
-        <div class="border-top pt-3">
-            <small class="text-muted">
-                Already Have an Account? <a class="ml-2" href="{% url 'register' %}">Sign In</a>
-            </small>
-        </div>
+
     </div>
 {%endblock content%}
